--- a/css.css
+++ b/css.css
@@ -1,4 +1,3 @@
-/* Numbered equations have a tendency not to be centered properly. This fixes that. */
 .eqn-mouseover {
               display: flex;
               align-items: flex-start;
@@ -6,7 +5,6 @@
               padding-right: 50%;
 }
 
-/* This is the CSS that moves the chapter selection to be the always-on sidebar. Switches back to a dropdown at 760px wide or less (phone screens, shrunken browsers) */
 @media only screen and (min-width : 761px) {
               a.dropbtn {
                              display: none;
@@ -28,30 +26,50 @@
               }
 }
 
-/* Removes some blank space in the code-tabs from xaringanExtra */
 .panel-active section {
 		padding-top: 0;
 }
 
-/* Coloring choices specific to The Effect */
 ul.navbar {
-		background-color: #167a4f;
+		background-color: #9AD4EE;
 }
 
 #active-page {
-		background-color: #167a4f;
+		background-color: #9AD4EE;
+		color: #1881c2;
 }
 
 li.toc {
-		background-color: #21b575;
+		background-color: #9AD4EE;
 }
 
 h1 {
-	color: #167a4f;
-	border-bottom-color: #167a4f;
+	color: #CD3232;
+	border-bottom-color: #CD3232;
 }
 
 h2 {
-	color: #167a4f;
-	border-bottom-color: #167a4f;
+	color: #CD3232;
+	border-bottom-color: #CD3232;
+}
+
+h3 {
+	color: #CD3232;
+	border-bottom-color: #CD3232;
+}
+
+.title {
+	color: #CD3232;
+}
+
+.author {
+	color: #37689b;
+}
+
+li .dropbtn {
+	color: #37689b;
+}
+
+input#search-box {
+	margin-left:15px
 }
